--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10907,6 +10907,18 @@ a.text-dark:focus {
   --main-color: blue;
 }
 
+.btn {
+  background-color: var(--main-color);
+}
+
+.hr {
+  background-color: var(--main-color);
+  height: 4px;
+  width: 150px;
+  margin-top: 0px;
+  margin-left: 0px;
+}
+
 .border-bottom-main {
   border-bottom: 4px solid var(--main-color);
   border-radius: 0px;
