--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,6 +1,16 @@
 :root{
   --main-color: blue;
 }
+.btn{
+  background-color: var(--main-color);
+}
+.hr{
+    background-color: var(--main-color);
+    height: 4px;
+    width: 150px;
+    margin-top: 0px;
+    margin-left: 0px;
+  }
 .border-bottom-main{
   border-bottom: 4px solid var(--main-color);
   border-radius: 0px;
