--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,6 +1,9 @@
 :root{
   --main-color: blue;
 }
+.card-img-bottom{
+  background: linear-gradient(white);
+}
 .btn{
   background-color: var(--main-color);
 }
