--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,6 +1,21 @@
 :root{
   --main-color: blue;
 }
+section{
+  background-image: url('/media/sky.jpg');
+  background-repeat: repeat;
+  background-attachment: fixed;
+ 
+}
+.mailbody{
+  background-image: url('/media/mailbody.jpg');
+  background-repeat: no-repeat;
+  width: max-content;
+  height: max-content;
+}
+.backgroundform{
+  background-image: url('/media/mailbody.jpg');
+}
 .card-img-bottom{
   background: linear-gradient(white);
 }
